@@ -1,4 +1,5 @@
 0.7.0
+* bis: new module: Bit input stream (2008-08-20)
 * gzp: new module: GZip base module (2008-06-28)
 * cbf: new module: circulair buffer (2008-06-02)
 * lbf: new module: lineair buffer (2008-05-29)
